PROJECT(PFG)

CMAKE_MINIMUM_REQUIRED(VERSION 2.4.0)
FIND_PACKAGE(Qt4 REQUIRED)
SET(QT_USE_QTOPENGL TRUE)
SET(QT_USE_QT3SUPPORT TRUE)


# SET(CMKAE_BUILD_TYPE DEBUG) Not clear right now
MESSAGE(STATUS, "$ENV{CXX_FLAGS}")
SET(CMAKE_CXX_FLAGS "$ENV{CXX_FLAGS} -O1 -w -g -ggdb")
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXX_FLAGS} -O0 -w -g -ggdb ")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXX_FLAGS} -O3 -w ")
MESSAGE(STATUS, "CXX_FLAGS: ${CMAKE_CXX_FLAGS}")

ADD_SUBDIRECTORY(src bin)
