
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ${EIGEN} ${MRPT_DIRS})
# MESSAGE(STATUS, "MRPT_DIRS: !! ${MRPT_DIRS}")

SET( PF_SRCS
	pf_localization_main.cpp
)

# SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)
# ADD_LIBRARY(zhicp SHARED ${ICP_WARPPER_SRCS})

LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/lib ${MRPT_LIB})
# Add the required libraries for linking:
ADD_EXECUTABLE(test_pf ${PF_SRCS})
TARGET_LINK_LIBRARIES(test_pf ${MRPT_LIBS})

