    
SET(QT_USE_QTOPENGL TRUE)
SET(QT_USE_QT3SUPPORT TRUE)
INCLUDE(${QT_USE_FILE})

INCLUDE_DIRECTORIES(
	${G2O_DIR} ${EIGEN} ${FLIRT_DIR}
	${QT_QTOPENGL_INCLUDE_DIR} 
	${CMAKE_CURRENT_SOURCE_DIR} 
	${CMAKE_SOURCE_DIR}/include 
	${CMAKE_CURRENT_SOURCE_DIR}/../mapGraph 
	${CMAKE_CURRENT_SOURCE_DIR}/../slam 
	${CMAKE_CURRENT_SOURCE_DIR}/../timestamp 
	${CMAKE_CURRENT_SOURCE_DIR}/../sensorFusion 
	${CMAKE_CURRENT_SOURCE_DIR}/../zhpsm
	)

SET(TEST_SRCS
	gtReader.cpp
	odoReader.cpp
	test.cpp
)

SET(RAWSEED_SRCS
	ui_win.cpp
	points.cpp
	main.cpp
)

SET(RAWSEED_MOC_HDRS
	points.h
	ui_win.h
)

# SET Libraries
SET(OTHER_LIBS slam sick_reader sensorFusion timestamp pfg zhicp zhpsm zhcsm)

# SET Lib Directory

LINK_DIRECTORIES(${G2O_LIB} ${FLIRT_LIB} ${CSM_LIB} ${CMAKE_BINARY_DIR}/lib ${MRPT_LIB})
QT4_WRAP_CPP(RAWSEED_MOC_SRCS ${RAWSEED_MOC_HDRS})

ADD_EXECUTABLE(rawseed_test ${TEST_SRCS})
TARGET_LINK_LIBRARIES(rawseed_test ${OTHER_LIBS} ${SSPARSE_LIBS} ${G2O_LIBS} ${FLIRT_LIBS} ${CSM_LIBS} ${OPENGL_LIBS} ${QT_LIBRARIES} ${MRPT_LIBS})

ADD_EXECUTABLE(rawseed ${RAWSEED_SRCS} ${RAWSEED_MOC_SRCS})
TARGET_LINK_LIBRARIES(rawseed ${OTHER_LIBS} ${SSPARSE_LIBS} ${G2O_LIBS} ${FLIRT_LIBS} ${CSM_LIBS} ${OPENGL_LIBS} ${QT_LIBRARIES} ${MRPT_LIBS})
