PROJECT(PFG)
SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)
SET(TIMESTAMP_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../timestamp)
INCLUDE_DIRECTORIES(${TIMESTAMP_DIR})
LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/lib)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} SRC_FILES)
ADD_LIBRARY(sick_reader SHARED ${SRC_FILES})

ADD_EXECUTABLE(test_sick test_sick.cpp)
TARGET_LINK_LIBRARIES(test_sick sick_reader timestamp rt)
